Simplify expressions